Saves names and age to database

--- a/TrackPoint/TrackPoint/Base.lproj/Main.storyboard
+++ b/TrackPoint/TrackPoint/Base.lproj/Main.storyboard
@@ -159,7 +159,10 @@
                                                 <rect key="frame" x="96.5" y="0.0" width="198.5" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                                                <connections>
+                                                    <action selector="lastNameChanged:" destination="U4A-yT-m31" eventType="editingDidEnd" id="RaM-Pp-V31"/>
+                                                </connections>
                                             </textField>
                                         </subviews>
                                         <viewLayoutGuide key="safeArea" id="DH6-z5-3Dq"/>
@@ -177,7 +180,10 @@
                                                 <rect key="frame" x="95" y="0.0" width="200" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                                                <connections>
+                                                    <action selector="ageChanged:" destination="U4A-yT-m31" eventType="editingDidEnd" id="OHp-c2-fSw"/>
+                                                </connections>
                                             </textField>
                                         </subviews>
                                         <viewLayoutGuide key="safeArea" id="awE-tR-GFv"/>
@@ -295,7 +301,9 @@
                         <viewLayoutGuide key="safeArea" id="YlO-Zc-MfE"/>
                     </view>
                     <connections>
+                        <outlet property="ageTF" destination="mDL-xc-HPJ" id="QHj-8O-oDU"/>
                         <outlet property="firstNameTF" destination="TPP-Qr-gGe" id="ck6-LN-vA1"/>
+                        <outlet property="lastNameTF" destination="mGh-yZ-mdO" id="tV7-Kt-JA8"/>
                         <outlet property="tableView" destination="dnl-Lj-4oe" id="Q1q-oa-cPg"/>
                     </connections>
                 </viewController>
